@@ -3,90 +3,46 @@ package com.interviewcoaching.services;
 import com.interviewcoaching.models.User;
 import com.interviewcoaching.repositories.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
-import java.util.List;
+import java.util.Collections;
 import java.util.Optional;
-import java.util.Random;
 
 @Service
-public class UserService {
+public class UserService implements UserDetailsService {
 
     @Autowired
     private UserRepository userRepository;
 
-    // Create user
-    public User createUser(User user) {
-        user.setCreatedAt(LocalDateTime.now());
-        user.setUpdatedAt(LocalDateTime.now());
-        user.setRoles(List.of("USER"));
-        user.setVerified(false);
+    @Override
+    public UserDetails loadUserByUsername(String usernameOrEmail) throws UsernameNotFoundException {
+        User user = userRepository.findByUsernameOrEmail(usernameOrEmail)
+                .orElseThrow(() -> new UsernameNotFoundException("User not found with username or email: " + usernameOrEmail));
+
+        return new org.springframework.security.core.userdetails.User(
+                user.getUsername(),
+                user.getPassword(),
+                Collections.singletonList(new SimpleGrantedAuthority("ROLE_USER"))
+        );
+    }
+
+    public Optional<User> findByUsernameOrEmail(String usernameOrEmail) {
+        return userRepository.findByUsernameOrEmail(usernameOrEmail);
+    }
+
+    public boolean existsByUsername(String username) {
+        return userRepository.existsByUsername(username);
+    }
+
+    public boolean existsByEmail(String email) {
+        return userRepository.existsByEmail(email);
+    }
+
+    public User save(User user) {
         return userRepository.save(user);
-    }
-
-    // Get all users
-    public List<User> getAllUsers() {
-        return userRepository.findAll();
-    }
-
-    // Get user by email
-    public User getUserByEmail(String email) {
-        Optional<User> userOpt = userRepository.findByEmail(email);
-        return userOpt.orElse(null);
-    }
-
-    // Update user
-    public User updateUser(String id, User updatedUser) {
-        Optional<User> userOpt = userRepository.findById(id);
-        if (userOpt.isEmpty()) return null;
-
-        User user = userOpt.get();
-        user.setUsername(updatedUser.getUsername() != null ? updatedUser.getUsername() : user.getUsername());
-        user.setFirstName(updatedUser.getFirstName() != null ? updatedUser.getFirstName() : user.getFirstName());
-        user.setLastName(updatedUser.getLastName() != null ? updatedUser.getLastName() : user.getLastName());
-        user.setEmail(updatedUser.getEmail() != null ? updatedUser.getEmail() : user.getEmail());
-        user.setPhoneNumber(updatedUser.getPhoneNumber() != null ? updatedUser.getPhoneNumber() : user.getPhoneNumber());
-        user.setPassword(updatedUser.getPassword() != null ? updatedUser.getPassword() : user.getPassword());
-        user.setSignInUsing(updatedUser.getSignInUsing() != null ? updatedUser.getSignInUsing() : user.getSignInUsing());
-        user.setSecondaryEmail(updatedUser.getSecondaryEmail() != null ? updatedUser.getSecondaryEmail() : user.getSecondaryEmail());
-        user.setUpdatedAt(LocalDateTime.now());
-
-        return userRepository.save(user);
-    }
-
-    // Delete user
-    public boolean deleteUser(String id) {
-        if (userRepository.existsById(id)) {
-            userRepository.deleteById(id);
-            return true;
-        }
-        return false;
-    }
-
-    // Generate 6-digit OTP
-    public String generateOtp(User user) {
-        Random random = new Random();
-        int otp = 100000 + random.nextInt(900000);
-        user.setOtp(String.valueOf(otp));
-        user.setOtpExpiry(LocalDateTime.now().plusMinutes(5));
-        user.setLastOtpRequestedAt(LocalDateTime.now());
-        userRepository.save(user);
-        return user.getOtp();
-    }
-
-    // Verify OTP
-    public boolean verifyOtp(User user, String otp) {
-        if (user.getOtp() != null &&
-            user.getOtp().equals(otp) &&
-            user.getOtpExpiry() != null &&
-            user.getOtpExpiry().isAfter(LocalDateTime.now())) {
-            user.setVerified(true);
-            user.setOtp(null);
-            user.setOtpExpiry(null);
-            userRepository.save(user);
-            return true;
-        }
-        return false;
     }
 }
